<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.usuario.editor_texto.MainActivity">

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/lblTamano"
        android:layout_alignStart="@+id/lblTamano"
        android:id="@+id/rgTamanos">

        <RadioButton
            android:text="@string/rbTam22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbTam22"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/rbTam24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbTam24"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/rbTam26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbTam26"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/rbTam28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbTam28"
            android:layout_weight="1" />

        <RadioButton
            android:text="rbTam30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbTam30"
            android:layout_weight="1" />
    </RadioGroup>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:text="@string/lblTexto"
        android:ems="10"
        android:id="@+id/lblTexto"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:textAlignment="center" />

    <TextView
        android:text="@string/lblEfecto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="51dp"
        android:id="@+id/lblEfecto"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:textStyle="normal|bold"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <TextView
        android:text="@string/lblTamano"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:id="@+id/lblTamano"
        android:layout_alignBaseline="@+id/lblEfecto"
        android:layout_alignBottom="@+id/lblEfecto"
        android:layout_alignParentStart="true"
        android:textStyle="normal|bold"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <CheckBox
        android:text="@string/chbSubrayado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chbSubrayado"
        android:layout_above="@+id/swSubrayado"
        android:layout_alignStart="@+id/chbCursiva" />

    <CheckBox
        android:text="@string/chbCursiva"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chbCursiva"
        android:layout_above="@+id/chbSubrayado"
        android:layout_alignStart="@+id/chbNegrita" />

    <CheckBox
        android:text="@string/chbNegrita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chbNegrita"
        android:layout_above="@+id/chbCursiva"
        android:layout_alignStart="@+id/lblEfecto" />

    <Switch
        android:text="@string/swSubrayado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/swSubrayado"
        android:layout_alignBottom="@+id/rgTamanos"
        android:layout_alignEnd="@+id/chbSubrayado" />
</RelativeLayout>
